dev/test_programs/INVALID/group12/scan_parse_errors/dec_error.go
// only postfix decrement is allowed

package main;

func main() {
	i := 3
	for i>2 {
		--i
    }
}